added new files and code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial scale=1">
         <title>Search</title>   
+        <link rel="stylesheets" href="styles.css">
         <style>
             #logo {
                 width: 400px;
@@ -60,7 +61,7 @@
             <a class="active" href="advanced_search">Advanced</a>
           </div>      
         <img id="logo" src="google.jpg" alt="google logo">
-        <form action="https://www.google.com/search">
+        <form action="https://www.google.com/search" method="get">
             <input id="search" type="text" name="q">
             <div id="buttons">
                 <input type="submit" class="search_buttons" name="btnK" value="Google Search">
